trace plugin fixes

--- a/plugin/example_config.toml
+++ b/plugin/example_config.toml
@@ -1,13 +1,59 @@
+###############################################################################
+###                      Plugin system configuration                        ###
+###############################################################################
+
 [plugins]
-    on = false # turn the plugin system, as a whole, on or off
-    disabled = ["list", "of", "plugin", "names", "to", "disable"]
-    dir = "the directory to load non-preloaded plugins from; defaults to cosmos-sdk/plugin/plugins"
-    [plugins.streaming] # a mapping of plugin-specific streaming service parameters, mapped to their pluginFileName
-    # maximum amount of time the BaseApp will await positive acknowledgement of message receipt from all streaming services
-    # in milliseconds
-    global_ack_wait_limit = 500
-        [plugins.streaming.file] # the specific parameters for the file streaming service plugin
-            keys = ["list", "of", "store", "keys", "we", "want", "to", "expose", "for", "this", "streaming", "service"]
-            write_dir = "path to the write directory"
-            prefix = "optional prefix to prepend to the generated file names"
-            ack = "false" # false == fire-and-forget; true == sends a message receipt success/fail signal
+
+# turn the plugin system, as a whole, on or off
+on = true
+
+# List of plugin names to disable
+disabled = ["file"]
+
+# The directory to load non-preloaded plugins from; defaults to ./plugin/plugins
+dir = ""
+
+# a mapping of plugin-specific streaming service parameters, mapped to their pluginFileName
+[plugins.streaming]
+
+# maximum amount of time the BaseApp will await positive acknowledgement of message receipt from all streaming services
+# in milliseconds
+global_ack_wait_limit = 500
+
+###############################################################################
+###                      File plugin configuration                          ###
+###############################################################################
+
+# the specific parameters for the file streaming service plugin
+[plugins.streaming.file]
+
+# List of store keys to expose to this streaming service.
+# Leaving this blank will include all store keys.
+keys = []
+
+# Path to the write directory
+write_dir = ""
+
+# Optional prefix to prepend to the generated file names
+prefix = ""
+
+# false == fire-and-forget; true == sends a message receipt success/fail signal
+ack = "false"
+
+###############################################################################
+###                       Trace Plugin configuration                        ###
+###############################################################################
+
+# The specific parameters for the Kafka streaming service plugin
+[plugins.streaming.trace]
+
+# List of store keys we want to expose for this streaming service.
+keys = []
+
+# Timeout threshold for which a particular block's messages must be delivered to
+# external streaming service before signaling back to the `ack` channel.
+# If the `ack` is set to `false` this setting will be ignored.
+# Note: This setting MUST be less then `plugins.global_ack_wait_limit`.
+#       Otherwise, the application will halt without committing blocks.
+# In milliseconds.
+deliver_block_wait_limit = 1000
