--- a/plugin/example_config.toml
+++ b/plugin/example_config.toml
@@ -8,7 +8,7 @@
 on = true
 
 # List of plugin names to disable
-disabled = ["file"]
+disabled = ["file", "trace"]
 
 # The directory to load non-preloaded plugins from; defaults to ./plugin/plugins
 dir = ""
@@ -57,3 +57,51 @@ keys = []
 #       Otherwise, the application will halt without committing blocks.
 # In milliseconds.
 deliver_block_wait_limit = 1000
+
+###############################################################################
+###                       Kafka Plugin configuration                        ###
+###############################################################################
+
+# The specific parameters for the Kafka streaming service plugin
+[plugins.streaming.kafka]
+
+# List of store keys we want to expose for this streaming service.
+keys = []
+
+# Optional topic prefix for the topic(s) where data will be stored
+topic_prefix = "block"
+
+# Flush and wait for outstanding messages and requests to complete delivery. (milliseconds)
+flush_timeout_ms = 1500
+
+# Timeout threshold for which a particular block's messages must be delivered to
+# external streaming service before signaling back to the `ack` channel.
+# If the `ack` is set to `false` this setting will be ignored.
+# Note: This setting MUST be less then `plugins.global_ack_wait_limit`.
+#       Otherwise, the application will halt without committing blocks.
+# In milliseconds.
+deliver_block_wait_limit = 1000
+
+# Producer configuration properties.
+# The plugin uses confluent-kafka-go which is a lightweight wrapper around librdkafka.
+# For a full list of producer configuration properties
+# see https://github.com/edenhill/librdkafka/blob/master/CONFIGURATION.md
+[plugins.streaming.kafka.producer]
+
+# Initial list of brokers as a comma seperated list of broker host or host:port[, host:port[,...]]
+bootstrap_servers = "localhost:9092"
+
+# Client identifier
+client_id = "my-app-id"
+
+# This field indicates the number of acknowledgements the leader
+# broker must receive from ISR brokers before responding to the request
+acks = "all"
+
+# When set to true, the producer will ensure that messages
+# are successfully produced exactly once and in the original produce order.
+# The following configuration properties are adjusted automatically (if not modified by the user)
+# when idempotence is enabled: max.in.flight.requests.per.connection=5 (must be less than or equal to 5),
+# retries=INT32_MAX (must be greater than 0), acks=all, queuing.strategy=fifo.
+# Producer instantation will fail if user-supplied configuration is incompatible.
+enable_idempotence = true
